--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 anyio==3.7.0
+async-timeout==4.0.3
 certifi==2023.7.22
 click==8.1.3
 dnspython==2.3.0
@@ -18,8 +19,10 @@ pydantic==1.10.8
 python-dotenv==1.0.0
 python-multipart==0.0.6
 PyYAML==6.0
+redis==5.0.1
 sniffio==1.3.0
 starlette==0.27.0
+typing_extensions==4.8.0
 ujson==5.7.0
 uvicorn==0.22.0
 uvloop==0.17.0
