--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 orjson==3.9.0
+pika==1.3.2
 pydantic==1.10.8
 python-dotenv==1.0.0
 python-multipart==0.0.6
